<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewMap"
        android:layout_width="wrap_content"
        android:layout_height="268dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/worldfood2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view"
        android:textColor="#E6FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMap" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="80dp"
        android:background="#800288D1"
        android:entries="@array/region_array"
        android:gravity="center"
        android:popupBackground="@android:drawable/editbox_dropdown_dark_frame"
        android:prompt="@string/region_prompt"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:checkedButton="@id/radioButton"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:linksClickable="false"
            android:text="@string/left_radio"
            android:textColor="#AAAAAA"
            android:textColorHighlight="#CC0288D1"
            android:textColorLink="#CC0288D1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rigth_radio"
            android:textColor="#AAAAAA"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_text"
        app:backgroundTint="#CC0097A7"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>